add image + remove about icon + move about to homepage

--- a/themes/PaperMod/layouts/_default/list.html
+++ b/themes/PaperMod/layouts/_default/list.html
@@ -2,7 +2,16 @@
 
 {{- if (and site.Params.profileMode.enabled .IsHome) }}
 {{- partial "index_profile.html" . }}
+{{- if .Content }}
+<div class="post-content">
+  {{- if not (.Param "disableAnchoredHeadings") }}
+  {{- partial "anchored_headings.html" .Content -}}
+  {{- else }}{{ .Content }}{{ end }}
+</div>
+{{- end }}
 {{- else }} {{/* if not profileMode */}}
+
+
 
 {{- if not .IsHome | and .Title }}
 <header class="page-header">
