--- a/themes/PaperMod/assets/css/extended/custom.css
+++ b/themes/PaperMod/assets/css/extended/custom.css
@@ -39,3 +39,9 @@
 .post-content {
     margin-top: 2rem !important;
 }
+
+.post-content svg {
+    width: 1em;
+    height: 1em;
+    vertical-align: -0.125em;
+}
